# orchestra

./: LICENSE  README.md
concert_rolemanager/: CMakeLists.txt  package.xml
concert_servicemanager/: CMakeLists.txt  package.xml
concert_servicemanager/launch/: add_service_from_files.launch  servicemanager.launch
concert_servicemanager/services/: admin.service  chatter.service  turtle.service
concert_servicemanager/src/concert_servicemanager/: __init__.py  implementation.py  log  roconservice_instance.py  servicemanager.py  utils.py
concert_workmanager/: CMakeLists.txt  package.xml
op_msgs/: CMakeLists.txt  package.xml
op_msgs/msg/: DedicatedApp.msg  RoconService.msg
op_msgs/srv/: ActivateService.srv
orchestration_platform/: CMakeLists.txt  package.xml  setup.py
orchestration_platform/concert/: ultra.concert
orchestration_platform/launch/: concert.launch  dude.launch  dudette.launch
orchestration_platform/src/orchestration_platform/: __init__.py  rocon_servicemanager.py
solution_viewer/: index.html
solution_viewer/js/: utils.js
