<?xml version="1.0"?>
<package>
  <name>concert_rolemanager</name>
  <version>0.0.0</version>
  <description>The concert_rolemanager package</description>

  <maintainer email="jihoonl@yujinrobot.com">Jihoon Lee</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://ros.org/wiki/concert_rolemanager</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>concert_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>concert_msgs</run_depend>
  <run_depend>rospy</run_depend>

</package>
