<?xml version="1.0"?>
<package>
  <name>op_msgs</name>
  <version>0.0.0</version>
  <description>The op_msgs package</description>

  <maintainer email="jihoonl@yujinrobot.com">Jihoon Lee</maintainer>

  <license>BSD</license>
  <!-- <url type="website">http://ros.org/wiki/op_msgs</url> -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>concert_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>concert_msgs</run_depend>
</package>
