<?xml version="1.0"?>
<package>
  <name>orchestration_platform</name>
  <version>0.0.0</version>
  <description>The orchestration_platform package</description>

  <maintainer email="jihoonl@yujinrobot.com">Jihoon Lee</maintainer>
  <license>BSD</license>

  <!-- <url type="website">http://ros.org/wiki/orchestration_platform</url> -->

  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>concert_rolemanager</build_depend>
  <build_depend>op_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>concert_rolemanager</run_depend>
  <run_depend>op_msgs</run_depend>
  <run_depend>rospy</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
